@@ -5,13 +5,16 @@ import androidx.compose.foundation.background
 import androidx.compose.foundation.clickable
 import androidx.compose.foundation.layout.Arrangement
 import androidx.compose.foundation.layout.Row
+import androidx.compose.foundation.layout.defaultMinSize
 import androidx.compose.foundation.layout.fillMaxWidth
 import androidx.compose.foundation.layout.padding
 import androidx.compose.material.LocalTextStyle
 import androidx.compose.material.Text
+import androidx.compose.material.minimumInteractiveComponentSize
 import androidx.compose.runtime.Composable
 import androidx.compose.ui.Alignment
 import androidx.compose.ui.Modifier
+import androidx.compose.ui.layout.ContentScale
 import androidx.compose.ui.text.style.TextAlign
 import androidx.compose.ui.unit.dp
 import org.jetbrains.compose.resources.DrawableResource
@@ -29,17 +32,20 @@ fun IconTextTimeButton(
     iconRes: DrawableResource,
     textRes: StringResource,
     timeRes: StringResource,
+    buttonHeight: Int = 50,
     buttonModifier: Modifier = Modifier.background(ColourCompositionLocal.current.primaryVariant).fillMaxWidth(1f),
     verticalAlign: Alignment.Vertical = Alignment.CenterVertically,
     textAlign: TextAlign = TextAlign.Center,
     onClick: () -> Unit,
 ) = Row(
-    modifier = buttonModifier.clickable(onClick = onClick).padding(8.dp),
+    modifier = buttonModifier.clickable(onClick = onClick).padding(8.dp).defaultMinSize(minHeight = buttonHeight.dp).minimumInteractiveComponentSize(),
     horizontalArrangement = Arrangement.SpaceBetween,
     verticalAlignment = verticalAlign,
 ) {
     Image(
+        modifier = Modifier.defaultMinSize(minHeight = buttonHeight.dp).minimumInteractiveComponentSize(),
         painter = painterResource(iconRes),
+        contentScale = ContentScale.FillHeight,
         contentDescription = null,
     )
     Text(
