@@ -1,7 +1,4 @@
 Make banner for morning menu
-Put content in individual items
-Space between buttons of column
-Fix icon/text/button sizes and proportions
 display buttons only if morning state
 fix icon for cosmeticism
 add time to button
