@@ -2,6 +2,12 @@ This is just to motivate myself to improve a little bit every day :)
 
 Best: 32
 
+28-11-2024
+Streak: 1
+Learned:
+Did:
+    - Morning buttons: Put content in individual items & Space between buttons of column & Fix icon/text/button sizes and proportions
+
 11-11-2024
 Streak: 1
 Learned:
